Add Arcmutate license and pitest plugins
With thanks to @hcoles and @GroupCDG-Labs for the OSS licence.

Signed-off-by: Andrew Aylett <andrew@aylett.co.uk>